--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ django-bootstrap3==5.0.3
 django-grappelli==2.6.3
 django-markdown-deux==1.0.5
 django-redis==3.8.0
+django-reversion==1.8.5
 django-rosetta==0.7.4
+django-taggit==0.12.2
 markdown2==2.3.0
 polib==1.0.4
 psycopg2==2.5.4
