--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Pillow==2.6.1
 argparse==1.2.1
 distribute==0.6.24
 django-bootstrap3==5.0.3
+django-crispy-forms==1.4.0
 django-grappelli==2.6.3
 django-markdown-deux==1.0.5
 django-redis==3.8.0
