--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ argparse==1.2.1
 distribute==0.6.24
 django-bootstrap3==5.0.3
 django-crispy-forms==1.4.0
+django-debug-toolbar==1.2.2
 django-grappelli==2.6.3
 django-markdown-deux==1.0.5
 django-redis==3.8.0
@@ -17,4 +18,5 @@ redis==2.10.3
 requests==2.5.1
 six==1.9.0
 sorl-thumbnail==12.1c
+sqlparse==0.1.14
 wsgiref==0.1.2
