--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ Django==1.7.1
 Pillow==2.6.1
 argparse==1.2.1
 distribute==0.6.24
+django-appconf==0.6
 django-bootstrap3==5.0.3
+django-bower==5.0.1
+django-compressor==1.4
 django-crispy-forms==1.4.0
 django-debug-toolbar==1.2.2
 django-grappelli==2.6.3
