--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Django==1.7.1
 Pillow==2.6.1
+PyJWT==0.4.1
 argparse==1.2.1
 distribute==0.6.24
-django-allauth==0.19.0
 django-appconf==0.6
 django-bower==5.0.1
 django-compressor==1.4
@@ -20,6 +20,7 @@ oauthlib==0.7.2
 polib==1.0.4
 psycopg2==2.5.4
 python-openid==2.2.5
+python-social-auth==0.2.1
 redis==2.10.3
 requests==2.5.1
 requests-oauthlib==0.4.2
