--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-bower==5.0.1
 django-compressor==1.4
 django-crispy-forms==1.4.0
 django-debug-toolbar==1.2.2
+django-easy-pjax==1.1.0
 django-extensions==1.4.9
 django-grappelli==2.6.3
 django-markdown-deux==1.0.5
