--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,13 @@ django-debug-toolbar==1.2.2
 django-easy-pjax==1.1.0
 django-extensions==1.4.9
 django-grappelli==2.6.3
+django-lockdown==1.0
 django-markdown-deux==1.0.5
 django-redis==3.8.0
 django-reversion==1.8.5
 django-rosetta==0.7.4
 django-taggit==0.12.2
+django-widget-tweaks==1.3
 markdown2==2.3.0
 oauthlib==0.7.2
 polib==1.0.4
